# ticket_routing_openenv

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
app/: data.py  env.py  grader.py  main.py  models.py
server/: app.py  ticket_environment.py
